--- a/themes/jenkinsmorrow/assets/sass/partials/design/regions/_preface.scss
+++ b/themes/jenkinsmorrow/assets/sass/partials/design/regions/_preface.scss
@@ -1,8 +1,14 @@
 .preface {
   position: relative;
+  max-height: 550px;
+  overflow: hidden;
   .preface-bar {
     position: absolute;
     bottom: 0;
-    z-index: 1
+    z-index: 1;
+    line-height: 0;
+  }
+  img, picture {
+    width: 100%;
   }
 }
