--- a/themes/jenkinsmorrow/assets/sass/partials/global/_variables.scss
+++ b/themes/jenkinsmorrow/assets/sass/partials/global/_variables.scss
@@ -14,11 +14,11 @@ $color-three: #A1A1A1; // Grey
 $nav-bg: $color-three;
 $site-bg: #F6F5F3;
 $main-bg: #fff;
-$footer-bg: #333;
+$footer-bg: #373737;
 
 // Typography
 $body-copy-color: #424242;
-$heading-color: #373737;
+$heading-color: #129C65;
 $link           : $color-one;
 $visited        : darken($link, 20%);
 $hover          : lighten($link, 20%);
