--- a/themes/jenkinsmorrow/assets/sass/partials/global/_variables.scss
+++ b/themes/jenkinsmorrow/assets/sass/partials/global/_variables.scss
@@ -47,6 +47,7 @@ $sidebar_second_columns : 3;
 //Layout Variables
 $container_width: 1200px;
 $phone: 0 767px;
+$med-phone: 500px 767px;
 $tablet-down: 0 979px;
 $tablet: 768px;
 $desktop: 980px;
