--- a/themes/jenkinsmorrow/assets/sass/partials/design/views/_front.scss
+++ b/themes/jenkinsmorrow/assets/sass/partials/design/views/_front.scss
@@ -94,4 +94,30 @@
       z-index: -1;
     }
   }
+  .views-row {
+    padding: .5em 0;
+    border-top: 1px solid #979797;
+    @include breakpoint($tablet, $no-query: '.no-mq') {
+      float: left;
+      width: 50%;
+    }
+    h6 {
+      margin: 0;
+      font-weight: normal;
+      color: inherit;
+      a {
+        overflow: hidden;
+        display: block;
+        color: inherit;
+      }
+      &:before {
+        content: '';
+        background: url('../images/triangle.png') no-repeat;
+        width: 7px;
+        height: 7px;
+        float: left;
+        margin: 4px 1em 0 1em;
+      }
+    }
+  }
 }
