--- a/themes/jenkinsmorrow/assets/sass/partials/styleguide/forms/_buttons.scss
+++ b/themes/jenkinsmorrow/assets/sass/partials/styleguide/forms/_buttons.scss
@@ -1,5 +1,6 @@
 input[type="submit"] {
-  @include btn(#999, #fff, #6286BD, 3px, $normal);
-  @include grad(#52BAD5, #5276A0, $stop: 100%); 
-  font-family: $heading-font-family;
+  @include btn(#0B8253, #fff, #098050, 4px, $normal);
+  @include grad(#0B8253, #12C17B, $stop: 100%); 
+  box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.20), inset 0px 1px 0px 0px #FFFFFF;
+
 }
